fixed top nav spacing

--- a/css/application.css
+++ b/css/application.css
@@ -534,6 +534,10 @@ p {
   margin-top: 10px;
   margin-bottom: 10px;
   justify-content: center; }
+  @media (min-width: 769px) {
+    .nav {
+      margin-top: 18px;
+      margin-bottom: 18px; } }
   .nav__item a {
     width: 100%;
     text-decoration: none;
